CustomizePage Localization Done

--- a/src/Winhance.UI/Features/Common/Localization/af.json
+++ b/src/Winhance.UI/Features/Common/Localization/af.json
@@ -166,8 +166,11 @@
   "SettingGroup_Security": "Sekuriteit",
   "SettingGroup_Layout": "Uitleg",
   "SettingGroup_Start_Menu_Settings": "Beginlys Instellings",
+  "SettingGroup_Frequently_Used_Items": "Dikwels Gebruikte Items",
   "SettingGroup_Start_Menu": "Beginlys",
   "SettingGroup_Windows_Theme": "Windows Tema",
+  "SettingGroup_Theme_Mode": "Tema modus",
+  "SettingGroup_Transparency": "Deursigtigheid",
   "SettingGroup_Taskbar_Icons": "Taakbalk Ikone",
   "SettingGroup_Taskbar_Behavior": "Taakbalk Gedrag",
   "SettingGroup_System_Tray": "Stelselvak",
