--- a/src/Winhance.UI/Features/Common/Localization/cs.json
+++ b/src/Winhance.UI/Features/Common/Localization/cs.json
@@ -166,8 +166,11 @@
   "SettingGroup_Security": "Zabezpečení",
   "SettingGroup_Layout": "Rozložení",
   "SettingGroup_Start_Menu_Settings": "Nastavení nabídky Start",
+  "SettingGroup_Frequently_Used_Items": "Často používané položky",
   "SettingGroup_Start_Menu": "Nabídka Start",
   "SettingGroup_Windows_Theme": "Motiv Windows",
+  "SettingGroup_Theme_Mode": "Režim motivu",
+  "SettingGroup_Transparency": "Průhlednost",
   "SettingGroup_Taskbar_Icons": "Ikony na hlavním panelu",
   "SettingGroup_Taskbar_Behavior": "Chování hlavního panelu",
   "SettingGroup_System_Tray": "Systémová lišta",
