--- a/src/Winhance.UI/Features/Common/Localization/de.json
+++ b/src/Winhance.UI/Features/Common/Localization/de.json
@@ -166,8 +166,11 @@
   "SettingGroup_Security": "Sicherheit",
   "SettingGroup_Layout": "Layout",
   "SettingGroup_Start_Menu_Settings": "Startmenü-Einstellungen",
+  "SettingGroup_Frequently_Used_Items": "Häufig verwendete Elemente",
   "SettingGroup_Start_Menu": "Startmenü",
   "SettingGroup_Windows_Theme": "Windows-Design",
+  "SettingGroup_Theme_Mode": "Design-Modus",
+  "SettingGroup_Transparency": "Transparenz",
   "SettingGroup_Taskbar_Icons": "Taskleistensymbole",
   "SettingGroup_Taskbar_Behavior": "Taskleistenverhalten",
   "SettingGroup_System_Tray": "Infobereich",
