--- a/src/Winhance.UI/Features/Common/Localization/el.json
+++ b/src/Winhance.UI/Features/Common/Localization/el.json
@@ -166,8 +166,11 @@
   "SettingGroup_Security": "Ασφάλεια",
   "SettingGroup_Layout": "Διάταξη",
   "SettingGroup_Start_Menu_Settings": "Ρυθμίσεις Μενού Έναρξης",
+  "SettingGroup_Frequently_Used_Items": "Συχνά χρησιμοποιούμενα στοιχεία",
   "SettingGroup_Start_Menu": "Μενού Έναρξης",
   "SettingGroup_Windows_Theme": "Θέμα Windows",
+  "SettingGroup_Theme_Mode": "Λειτουργία θέματος",
+  "SettingGroup_Transparency": "Διαφάνεια",
   "SettingGroup_Taskbar_Icons": "Εικονίδια Γραμμής Εργασιών",
   "SettingGroup_Taskbar_Behavior": "Συμπεριφορά Γραμμής Εργασιών",
   "SettingGroup_System_Tray": "Περιοχή Ειδοποιήσεων",
