--- a/src/Winhance.UI/Features/Common/Localization/en.json
+++ b/src/Winhance.UI/Features/Common/Localization/en.json
@@ -166,8 +166,10 @@
   "SettingGroup_Security": "Security",
   "SettingGroup_Layout": "Layout",
   "SettingGroup_Start_Menu_Settings": "Start Menu Settings",
-  "SettingGroup_Start_Menu": "Start Menu",
+  "SettingGroup_Frequently_Used_Items": "Frequently Used Items",
   "SettingGroup_Windows_Theme": "Windows Theme",
+  "SettingGroup_Theme_Mode": "Theme mode",
+  "SettingGroup_Transparency": "Transparency",
   "SettingGroup_Taskbar_Icons": "Taskbar Icons",
   "SettingGroup_Taskbar_Behavior": "Taskbar Behavior",
   "SettingGroup_System_Tray": "System Tray",
