--- a/src/Winhance.UI/Features/Common/Localization/es.json
+++ b/src/Winhance.UI/Features/Common/Localization/es.json
@@ -166,8 +166,11 @@
   "SettingGroup_Security": "Seguridad",
   "SettingGroup_Layout": "Diseño",
   "SettingGroup_Start_Menu_Settings": "Configuración del Menú Inicio",
+  "SettingGroup_Frequently_Used_Items": "Elementos usados con frecuencia",
   "SettingGroup_Start_Menu": "Menú Inicio",
   "SettingGroup_Windows_Theme": "Tema de Windows",
+  "SettingGroup_Theme_Mode": "Modo de tema",
+  "SettingGroup_Transparency": "Transparencia",
   "SettingGroup_Taskbar_Icons": "Iconos de la Barra de Tareas",
   "SettingGroup_Taskbar_Behavior": "Comportamiento de la Barra de Tareas",
   "SettingGroup_System_Tray": "Bandeja del Sistema",
