--- a/src/Winhance.UI/Features/Common/Localization/fr.json
+++ b/src/Winhance.UI/Features/Common/Localization/fr.json
@@ -166,8 +166,11 @@
   "SettingGroup_Security": "Sécurité",
   "SettingGroup_Layout": "Mise en page",
   "SettingGroup_Start_Menu_Settings": "Paramètres du menu Démarrer",
+  "SettingGroup_Frequently_Used_Items": "Éléments fréquemment utilisés",
   "SettingGroup_Start_Menu": "Menu Démarrer",
   "SettingGroup_Windows_Theme": "Thème Windows",
+  "SettingGroup_Theme_Mode": "Mode de thème",
+  "SettingGroup_Transparency": "Transparence",
   "SettingGroup_Taskbar_Icons": "Icônes de la barre des tâches",
   "SettingGroup_Taskbar_Behavior": "Comportement de la barre des tâches",
   "SettingGroup_System_Tray": "Zone de notification",
