--- a/src/Winhance.UI/Features/Common/Localization/hi.json
+++ b/src/Winhance.UI/Features/Common/Localization/hi.json
@@ -166,8 +166,11 @@
   "SettingGroup_Security": "सुरक्षा",
   "SettingGroup_Layout": "लेआउट",
   "SettingGroup_Start_Menu_Settings": "स्टार्ट मेनू सेटिंग्स",
+  "SettingGroup_Frequently_Used_Items": "बार-बार उपयोग किए जाने वाले आइटम",
   "SettingGroup_Start_Menu": "स्टार्ट मेनू",
   "SettingGroup_Windows_Theme": "विंडोज थीम",
+  "SettingGroup_Theme_Mode": "थीम मोड",
+  "SettingGroup_Transparency": "पारदर्शिता",
   "SettingGroup_Taskbar_Icons": "टास्कबार आइकन",
   "SettingGroup_Taskbar_Behavior": "टास्कबार व्यवहार",
   "SettingGroup_System_Tray": "सिस्टम ट्रे",
