--- a/src/Winhance.UI/Features/Common/Localization/hu.json
+++ b/src/Winhance.UI/Features/Common/Localization/hu.json
@@ -166,8 +166,11 @@
   "SettingGroup_Security": "Biztonság",
   "SettingGroup_Layout": "Elrendezés",
   "SettingGroup_Start_Menu_Settings": "Start menü beállításai",
+  "SettingGroup_Frequently_Used_Items": "Gyakran használt elemek",
   "SettingGroup_Start_Menu": "Start menü",
   "SettingGroup_Windows_Theme": "Windows téma",
+  "SettingGroup_Theme_Mode": "Téma mód",
+  "SettingGroup_Transparency": "Átlátszóság",
   "SettingGroup_Taskbar_Icons": "Tálca ikonok",
   "SettingGroup_Taskbar_Behavior": "Tálca viselkedése",
   "SettingGroup_System_Tray": "Rendszertálca",
