--- a/src/Winhance.UI/Features/Common/Localization/it.json
+++ b/src/Winhance.UI/Features/Common/Localization/it.json
@@ -166,8 +166,11 @@
   "SettingGroup_Security": "Sicurezza",
   "SettingGroup_Layout": "Layout",
   "SettingGroup_Start_Menu_Settings": "Impostazioni del menu Start",
+  "SettingGroup_Frequently_Used_Items": "Elementi usati di frequente",
   "SettingGroup_Start_Menu": "Menu Start",
   "SettingGroup_Windows_Theme": "Tema di Windows",
+  "SettingGroup_Theme_Mode": "Modalità tema",
+  "SettingGroup_Transparency": "Trasparenza",
   "SettingGroup_Taskbar_Icons": "Icone della barra delle applicazioni",
   "SettingGroup_Taskbar_Behavior": "Comportamento della barra delle applicazioni",
   "SettingGroup_System_Tray": "Area di notifica",
