--- a/src/Winhance.UI/Features/Common/Localization/ja.json
+++ b/src/Winhance.UI/Features/Common/Localization/ja.json
@@ -166,8 +166,11 @@
   "SettingGroup_Security": "セキュリティ",
   "SettingGroup_Layout": "レイアウト",
   "SettingGroup_Start_Menu_Settings": "スタートメニュー設定",
+  "SettingGroup_Frequently_Used_Items": "よく使用する項目",
   "SettingGroup_Start_Menu": "スタートメニュー",
   "SettingGroup_Windows_Theme": "Windowsテーマ",
+  "SettingGroup_Theme_Mode": "テーマモード",
+  "SettingGroup_Transparency": "透明度",
   "SettingGroup_Taskbar_Icons": "タスクバーアイコン",
   "SettingGroup_Taskbar_Behavior": "タスクバーの動作",
   "SettingGroup_System_Tray": "システムトレイ",
