--- a/src/Winhance.UI/Features/Common/Localization/lt.json
+++ b/src/Winhance.UI/Features/Common/Localization/lt.json
@@ -166,8 +166,11 @@
   "SettingGroup_Security": "Saugumas",
   "SettingGroup_Layout": "Išdėstymas",
   "SettingGroup_Start_Menu_Settings": "Paleidimo meniu nustatymai",
+  "SettingGroup_Frequently_Used_Items": "Dažnai naudojami elementai",
   "SettingGroup_Start_Menu": "Paleidimo meniu",
   "SettingGroup_Windows_Theme": "Windows tema",
+  "SettingGroup_Theme_Mode": "Temos režimas",
+  "SettingGroup_Transparency": "Skaidrumas",
   "SettingGroup_Taskbar_Icons": "Užduočių juostos piktogramos",
   "SettingGroup_Taskbar_Behavior": "Užduočių juostos elgsena",
   "SettingGroup_System_Tray": "Sistemos dėklas",
