--- a/src/Winhance.UI/Features/Common/Localization/lv.json
+++ b/src/Winhance.UI/Features/Common/Localization/lv.json
@@ -166,8 +166,11 @@
   "SettingGroup_Security": "Drošība",
   "SettingGroup_Layout": "Izkārtojums",
   "SettingGroup_Start_Menu_Settings": "Starta izvēlnes iestatījumi",
+  "SettingGroup_Frequently_Used_Items": "Bieži lietotie vienumi",
   "SettingGroup_Start_Menu": "Starta izvēlne",
   "SettingGroup_Windows_Theme": "Windows motīvs",
+  "SettingGroup_Theme_Mode": "Motīva režīms",
+  "SettingGroup_Transparency": "Caurspīdīgums",
   "SettingGroup_Taskbar_Icons": "Uzdevumjoslas ikonas",
   "SettingGroup_Taskbar_Behavior": "Uzdevumjoslas uzvedība",
   "SettingGroup_System_Tray": "Sistēmas teknē",
