--- a/src/Winhance.UI/Features/Common/Localization/pl.json
+++ b/src/Winhance.UI/Features/Common/Localization/pl.json
@@ -166,8 +166,11 @@
   "SettingGroup_Security": "Bezpieczeństwo",
   "SettingGroup_Layout": "Układ",
   "SettingGroup_Start_Menu_Settings": "Ustawienia menu Start",
+  "SettingGroup_Frequently_Used_Items": "Często używane elementy",
   "SettingGroup_Start_Menu": "Menu Start",
   "SettingGroup_Windows_Theme": "Motyw Windows",
+  "SettingGroup_Theme_Mode": "Tryb motywu",
+  "SettingGroup_Transparency": "Przezroczystość",
   "SettingGroup_Taskbar_Icons": "Ikony paska zadań",
   "SettingGroup_Taskbar_Behavior": "Zachowanie paska zadań",
   "SettingGroup_System_Tray": "Zasobnik systemowy",
