--- a/src/Winhance.UI/Features/Common/Localization/pt-BR.json
+++ b/src/Winhance.UI/Features/Common/Localization/pt-BR.json
@@ -166,8 +166,11 @@
   "SettingGroup_Security": "Segurança",
   "SettingGroup_Layout": "Layout",
   "SettingGroup_Start_Menu_Settings": "Configurações do Menu Iniciar",
+  "SettingGroup_Frequently_Used_Items": "Itens usados com frequência",
   "SettingGroup_Start_Menu": "Menu Iniciar",
   "SettingGroup_Windows_Theme": "Tema do Windows",
+  "SettingGroup_Theme_Mode": "Modo de tema",
+  "SettingGroup_Transparency": "Transparência",
   "SettingGroup_Taskbar_Icons": "Ícones da Barra de Tarefas",
   "SettingGroup_Taskbar_Behavior": "Comportamento da Barra de Tarefas",
   "SettingGroup_System_Tray": "Bandeja do Sistema",
