--- a/src/Winhance.UI/Features/Common/Localization/ru.json
+++ b/src/Winhance.UI/Features/Common/Localization/ru.json
@@ -166,8 +166,11 @@
   "SettingGroup_Security": "Безопасность",
   "SettingGroup_Layout": "Макет",
   "SettingGroup_Start_Menu_Settings": "Настройки меню 'Пуск'",
+  "SettingGroup_Frequently_Used_Items": "Часто используемые элементы",
   "SettingGroup_Start_Menu": "Меню 'Пуск'",
   "SettingGroup_Windows_Theme": "Тема Windows",
+  "SettingGroup_Theme_Mode": "Режим темы",
+  "SettingGroup_Transparency": "Прозрачность",
   "SettingGroup_Taskbar_Icons": "Значки панели задач",
   "SettingGroup_Taskbar_Behavior": "Поведение панели задач",
   "SettingGroup_System_Tray": "Системный трей",
