--- a/src/Winhance.UI/Features/Common/Localization/sv.json
+++ b/src/Winhance.UI/Features/Common/Localization/sv.json
@@ -166,8 +166,11 @@
   "SettingGroup_Security": "Säkerhet",
   "SettingGroup_Layout": "Layout",
   "SettingGroup_Start_Menu_Settings": "Inställningar för Start-menyn",
+  "SettingGroup_Frequently_Used_Items": "Ofta använda objekt",
   "SettingGroup_Start_Menu": "Start-meny",
   "SettingGroup_Windows_Theme": "Windows-tema",
+  "SettingGroup_Theme_Mode": "Temaläge",
+  "SettingGroup_Transparency": "Transparens",
   "SettingGroup_Taskbar_Icons": "Ikoner i Aktivitetsfältet",
   "SettingGroup_Taskbar_Behavior": "Beteende för Aktivitetsfältet",
   "SettingGroup_System_Tray": "Systemfältet",
