--- a/src/Winhance.UI/Features/Common/Localization/uk.json
+++ b/src/Winhance.UI/Features/Common/Localization/uk.json
@@ -166,8 +166,11 @@
   "SettingGroup_Security": "Безпека",
   "SettingGroup_Layout": "Макет",
   "SettingGroup_Start_Menu_Settings": "Налаштування меню \"Пуск\"",
+  "SettingGroup_Frequently_Used_Items": "Часто використовувані елементи",
   "SettingGroup_Start_Menu": "Меню \"Пуск\"",
   "SettingGroup_Windows_Theme": "Тема Windows",
+  "SettingGroup_Theme_Mode": "Режим теми",
+  "SettingGroup_Transparency": "Прозорість",
   "SettingGroup_Taskbar_Icons": "Іконки панелі завдань",
   "SettingGroup_Taskbar_Behavior": "Поведінка панелі завдань",
   "SettingGroup_System_Tray": "Системний трей",
