--- a/src/Winhance.UI/Features/Common/Localization/vi.json
+++ b/src/Winhance.UI/Features/Common/Localization/vi.json
@@ -166,8 +166,11 @@
   "SettingGroup_Security": "Bảo mật",
   "SettingGroup_Layout": "Bố cục",
   "SettingGroup_Start_Menu_Settings": "Cài đặt Menu Bắt đầu",
+  "SettingGroup_Frequently_Used_Items": "Các mục thường dùng",
   "SettingGroup_Start_Menu": "Menu Bắt đầu",
   "SettingGroup_Windows_Theme": "Chủ đề Windows",
+  "SettingGroup_Theme_Mode": "Chế độ chủ đề",
+  "SettingGroup_Transparency": "Độ trong suốt",
   "SettingGroup_Taskbar_Icons": "Biểu tượng thanh tác vụ",
   "SettingGroup_Taskbar_Behavior": "Hành vi thanh tác vụ",
   "SettingGroup_System_Tray": "Khay hệ thống",
