--- a/src/Winhance.UI/Features/Common/Localization/zh-Hans.json
+++ b/src/Winhance.UI/Features/Common/Localization/zh-Hans.json
@@ -166,8 +166,11 @@
   "SettingGroup_Security": "安全",
   "SettingGroup_Layout": "布局",
   "SettingGroup_Start_Menu_Settings": "开始菜单设置",
+  "SettingGroup_Frequently_Used_Items": "常用项目",
   "SettingGroup_Start_Menu": "开始菜单",
   "SettingGroup_Windows_Theme": "Windows 主题",
+  "SettingGroup_Theme_Mode": "主题模式",
+  "SettingGroup_Transparency": "透明度",
   "SettingGroup_Taskbar_Icons": "任务栏图标",
   "SettingGroup_Taskbar_Behavior": "任务栏行为",
   "SettingGroup_System_Tray": "系统托盘",
