--- a/src/Winhance.UI/Features/Common/Localization/zh-Hant.json
+++ b/src/Winhance.UI/Features/Common/Localization/zh-Hant.json
@@ -166,8 +166,11 @@
   "SettingGroup_Security": "安全性",
   "SettingGroup_Layout": "版面配置",
   "SettingGroup_Start_Menu_Settings": "開始功能表設定",
+  "SettingGroup_Frequently_Used_Items": "常用項目",
   "SettingGroup_Start_Menu": "開始功能表",
   "SettingGroup_Windows_Theme": "Windows 佈景主題",
+  "SettingGroup_Theme_Mode": "佈景主題模式",
+  "SettingGroup_Transparency": "透明度",
   "SettingGroup_Taskbar_Icons": "工作列圖示",
   "SettingGroup_Taskbar_Behavior": "工作列行為",
   "SettingGroup_System_Tray": "系統匣",
