--- a/src/Winhance.UI/Features/Common/Localization/nl.json
+++ b/src/Winhance.UI/Features/Common/Localization/nl.json
@@ -166,8 +166,11 @@
   "SettingGroup_Security": "Beveiliging",
   "SettingGroup_Layout": "Lay-out",
   "SettingGroup_Start_Menu_Settings": "Startmenu Instellingen",
+  "SettingGroup_Frequently_Used_Items": "Veelgebruikte items",
   "SettingGroup_Start_Menu": "Startmenu",
   "SettingGroup_Windows_Theme": "Windows Thema",
+  "SettingGroup_Theme_Mode": "Thema modus",
+  "SettingGroup_Transparency": "Transparantie",
   "SettingGroup_Taskbar_Icons": "Taakbalk Pictogrammen",
   "SettingGroup_Taskbar_Behavior": "Taakbalk Gedrag",
   "SettingGroup_System_Tray": "Systeemvak",
